2024-05-29T01:20:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9278712814 # 310
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-29
* notice: last 14d: unq all: 3 24
* notice: prev accum: outdated-unq outdated-all / unq all: 370 753 / 390 780
* notice: next accum: outdated-unq outdated-all / unq all: 372 756 / 391 781
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-14] / [2024-05-15 2024-05-28]

2024-05-28T01:17:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9262045854 # 309
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-28
* notice: last 14d: unq all: 4 26
* notice: prev accum: outdated-unq outdated-all / unq all: 369 752 / 389 779
* notice: next accum: outdated-unq outdated-all / unq all: 370 753 / 390 780
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-05-13] / [2024-05-14 2024-05-27]

2024-05-26T08:22:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9241849438 # 307
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-26
* notice: last 14d: unq all: 4 27
* notice: prev accum: outdated-unq outdated-all / unq all: 369 752 / 388 778
* notice: next accum: outdated-unq outdated-all / unq all: 369 752 / 389 779
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-05-26]

2024-05-25T16:22:06Z: