@@ -1,15 +1,10 @@
 {
-  "count": 24,
+  "count": 23,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-05-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-05-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -69,6 +64,11 @@
     },
     {
       "timestamp": "2024-05-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-29T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
