@@ -1,3 +1,12 @@
+2024-05-30T01:17:54Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9295424892 # 311
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-30
+* notice: last 14d: unq all: 3 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 372 756 / 391 781
+* notice: next accum: outdated-unq outdated-all / unq all: 374 758 / 392 782
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-05-15] / [2024-05-16 2024-05-29]
+
 2024-05-29T01:20:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9278712814 # 310
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-29
